<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.github.mostroverkhov.rsocket.backport.sample.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" >

            <CheckBox
                android:id="@+id/print_responses_view"
                android:checked="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:padding="4dp"
                android:text="@string/show_new_replies"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/counter_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity = "right"
                android:padding="8dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                tools:text="42" />

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/responses_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_bar_layout"
        android:layout_marginBottom="140dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/req_rep_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/request_response" />

        <Button
            android:id="@+id/req_stream_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/request_stream" />

        <Button
            android:id="@+id/fnf_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/fire_and_forget" />

        <Button
            android:id="@+id/request_channel_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/request_channel" />

        <Button
            android:id="@+id/request_cancel_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel" />

    </LinearLayout>
</RelativeLayout>
